fixed align

--- a/src/scss/layouts/hero.scss
+++ b/src/scss/layouts/hero.scss
@@ -55,7 +55,7 @@
     width: 100%;
     padding: 10px 5px;
     color: #2e2e2e;
-    text-align: left;
+    text-align: center;
     line-height: 30px;
     font-size: $font-size-medium;
     background-color: rgba(172, 197, 54, 0.9);
